Fix Speaker Description Overflow

--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -1788,7 +1788,7 @@ ul.faq-answer li a:hover{
   background-repeat: no-repeat;
 }
 .bordered-image .border-data{
-  padding: 10px;
+  padding: 2px 5px;
   opacity: 0;
   background-image: linear-gradient(to bottom, rgb(94,0,120, 0.7), rgb(242,0,130, 0.7));
   color: #fff;
@@ -1804,6 +1804,7 @@ ul.faq-answer li a:hover{
   opacity: 0.9;
   font-family: 'Montserrat Alternates', sans-serif !important;
   font-size: 18px;
+  margin-top: 10px;
 }
 .border-data .social-links{
   margin: 10px auto 0 auto;
